Complete all of function